--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en" class="no-js">
 
 <head>
@@ -34,6 +34,10 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+
+       git이 연결이 잘 되었는지 확인한다.
     -->
+
+     
   </body>
 </html>
